--- a/src/components/displayAllJobs/index.css
+++ b/src/components/displayAllJobs/index.css
@@ -21,7 +21,7 @@
     
     /* background: linear-gradient(700deg, #002199, #78ffd6); */
     Background: rgba(255, 255, 255, 0.2) (transparent glass);
-    background-color: wheat;
+    /* background-color: wheat; */
     Backdrop-filter: blur(900px);
     /* box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05); */
     /* transition: all 2s ease;    */
