--- a/src/components/filterSection/index.css
+++ b/src/components/filterSection/index.css
@@ -1,7 +1,7 @@
 .filter-ulist {
   /* list-style: none; */
   margin: 0;
-  background-color: violet;
+  /* background-color: violet; */
   padding-left: 10px;
   /* border: 1px solid green; */
   display: flex !important;          /* force flex, override Bootstrap */
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   gap: 1px;
-  background-color: yellowgreen;
+  /* background-color: yellowgreen; */
   height: 100%;
 }
 
