--- a/src/components/jobs/index.css
+++ b/src/components/jobs/index.css
@@ -22,7 +22,7 @@ h1{
   z-index: 20;
   margin: 0;
   width: 50%;
-  background-color: blue;
+  /* background-color: blue; */
   margin-left: 5px;
 }
 
@@ -49,7 +49,7 @@ h1{
   align-items: flex-start;
   flex: 1;
   min-height: 0;
-  background-color: yellow;
+  /* background-color: yellow; */
   
 }
 
@@ -84,7 +84,7 @@ h1{
   max-height: 100%;
   /* min-height: 0; */
   /* overflow-y: auto; */
-  background-color: brown;
+  /* background-color: brown; */
   
 }
 
@@ -104,7 +104,7 @@ h1{
   /* overflow-y: auto; */
   /* position: sticky; */
   /* top: 15px; */
-  background-color: aqua;
+  /* background-color: aqua; */
 }
 
 
